--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@
 
 .container {
     display: flex;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .div {
@@ -22,6 +24,7 @@
     transition: 0.3s;
     display: flex;
     width: min-content;
+    flex-direction: column;
     margin-left: auto;
     margin-right: auto;
     margin-top: 25px;
